fixing merge conflicts